Bug 580611 - fix run service sequence handler
In a recent cleanup, the stream for getting a selected service sequence
was broken.

Change-Id: I3c8a62cbfa1cac793275f3b45975b18c8199e244